# SLT.KIT

./: Dockerfile.CPU-Server  Dockerfile.ST-Baseline  DownloadPyTorch-Anaconda.sh  DownloadPyTorch.sh  LICENSE  README.md
docker/: Dockerfile.CPU-Server  Dockerfile.CPU-Server.Lamtram  Dockerfile.CPU-Server.NMTGMinor  Dockerfile.CPU-Server.OpenNMT-py  Dockerfile.CPU-Server.OpenNMT-py.source
docs/: FileStructure.md  Server.md  Systems.md  mtResults.md
scripts/NMTGMinor/: Train.sh  Train.speech.sh  Translate.sh
scripts/ctc/: bpe10000.yaml  bpe300.yaml  create_unit_dict.py
scripts/dataCollection/: EPPS.sh  IWSLT.2017.sh  TEDLIUM-v2.sh
scripts/defaultPreprocessor/: Train.sh  Translate.sh
scripts/evaluate/: Eval.asr.sh  Eval.manualTranscript.sh  Eval.sh  Rover.asr.sh  text2ctm.py  wrap-xml.perl
scripts/monoTranslationData/: AddPunctuation.py  ConCat10.pl  RandCat_long.pl  TestASROutput.sh  Train.sh  Translate.sh  generateUL.pl
scripts/openNMT-py/: Adapt.sh  Train.sh  Translate.sh
scripts/xnmt/: config.las-pyramidal-preproc.yaml  config.las-pyramidal-test.yaml  config.las-pyramidal-train.yaml  config.las-pyramidal.yaml  extract-test-db.yaml  make-test-db.sh  prep-data.sh
src/server/: Makefile.am  PipelineManager.cpp  PipelineManager.h  RUN.sh  Segment.h  configure.ac  main.cpp  util.h
src/server/connections/: Connection.cpp  Connection.h  ConnectionFactory.cpp  ConnectionFactory.h  ICEConnection.cpp  ICEConnection.h  Makefile.am  MediatorConnection.cpp  MediatorConnection.h
src/server/data/: DataFlow.cpp  DataFlow.h  Makefile.am  SentenceDataFlow.cpp  SentenceDataFlow.h  WordDataFlow.cpp  WordDataFlow.h
src/server/perl/: Makefile.am  prepro_Speech.pl  speech_prepro_de.pl  speech_prepro_en.pl
src/server/python/: BPEService.py  ExtraPreprocessing.py  Makefile.am
src/server/python/nonbreaking_prefixes/: nonbreaking_prefix.de  nonbreaking_prefix.en  nonbreaking_prefix.fr
src/server/services/: Makefile.am  Service.cpp  Service.h  ServiceFactory.cpp  ServiceFactory.h
src/server/services/mt/: LamtramWrapper.cpp  LamtramWrapper.h  Makefile.am  OpenNMT.cpp  OpenNMT.h  XNMT.cpp  XNMT.h
src/server/services/preprocess/: Annotate.cpp  Annotate.h  BPEService.cpp  BPEService.h  Cache.cpp  Cache.h  CaseMarkup.cpp  CaseMarkup.h  Detokenize.cpp  Detokenize.h  MLTargetToken.cpp  MLTargetToken.h  Makefile.am  PythonPrepro.cpp  PythonPrepro.h  ReplaceTable.cpp  ReplaceTable.h  Smartcase.cpp  Smartcase.h  SpeechPrepro.cpp  SpeechPrepro.h
systems/ctc-tedlium2/: Download.sh  Test.sh  Train.sh
systems/ctc-tedlium2.midSize/: Download.sh  Test.sh
systems/ctc-tedlium2.smallTED/: Download.sh  Test.sh
systems/las-tedlium2/: Download.sh  Test.sh  Train.sh  Transcribe.sh
systems/las-tedlium2.smallTED/: Download.sh  Test.sh
systems/midSize/: Download.sh  Summary.en-de.md  Train.sh  Translate.sh
systems/smallTED/: Download.sh  Summary.de-en.md  Summary.en-fr.md  Summary.md  Test.sh  Train.sh  Translate.sh
