INCLUDES = $(all_includes) -I$(top_srcdir)/ -I$(top_srcdir)/services/ -I$(top_srcdir)/services/mt/ -I$(top_srcdir)/services/preprocess/ -I$(top_srcdir)/data/
lib_LTLIBRARIES = libTSConnections.la

include_HEADERS = ConnectionFactory.h Connection.h MediatorConnection.h
libTSConnections_la_SOURCES = ConnectionFactory.cpp Connection.cpp MediatorConnection.cpp


