INCLUDES = $(all_includes)
METASOURCES = AUTO

pythonlibdir=$(libdir)/python
pythonlib_DATA = BPEService.py ExtraPreprocessing.py nonbreaking_prefixes/nonbreaking_prefix.en nonbreaking_prefixes/nonbreaking_prefix.de nonbreaking_prefixes/nonbreaking_prefix.fr nonbreaking_prefixes/nonbreaking_prefix.es nonbreaking_prefixes/nonbreaking_prefix.it nonbreaking_prefixes/nonbreaking_prefix.pt

