INCLUDES = $(all_includes) -I$(top_srcdir)/services/ -I$(top_srcdir)/ -I$(top_srcdir)/services/mt/
lib_LTLIBRARIES = libTSPreproServices.la

include_HEADERS = Annotate.h BPEService.h Cache.h CaseMarkup.h Detokenize.h MLTargetToken.h PythonPrepro.h ReplaceTable.h Smartcase.h SpeechPrepro.h
libTSPreproServices_la_SOURCES = Annotate.cpp BPEService.cpp Cache.cpp CaseMarkup.cpp Detokenize.cpp MLTargetToken.cpp PythonPrepro.cpp ReplaceTable.cpp Smartcase.cpp SpeechPrepro.cpp


